--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "sonar-lipi-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/sonar-lipi-logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/sonar-lipi-logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/sonar-lipi-logo.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.shlok1999.sonarlipiapp"
