--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.11",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "^51.0.16",
     "expo-constants": "~16.0.2",
     "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.15",
+    "expo-router": "^3.5.17",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -34,9 +35,10 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-share": "^10.2.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.3",
     "react-to-print": "^2.15.1",
