--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^51.0.16",
@@ -23,7 +24,9 @@
     "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "^3.5.17",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -34,11 +37,13 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-share": "^10.2.1",
     "react-native-table-component": "^1.2.2",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.3",
     "react-to-print": "^2.15.1",
